added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,35 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          </ul>
+          <ul>
+            <li>The head element contains information about the webpage.</li>
+            <li>The body element represents the visible content shown to the user</li>
+          </ul>
+        </section>
+        <section class="card" id="css-section">
+          <h2>CSS</h2>
+          <ul>
+            <li>Cd opens repositories</li>
+          </ul>
+        </section>
+        <section class="card" id="git-section">
+          <h2>Git</h2>
+          <ul>
+          <li>Git status shows what brand you are in </li>
+          </ul>
+        </section>
+        <section class="card" id="javascript-section">
+          <h2>JavaScipt</h2>
+          <ul>
+            <li>h1 is the largest heading utilized once</li>
+            <li>sections are the elements of the body of the document</li>
+          </ul>
+        </section>
     </main>
 
     <footer>
